11_minikube/deployments/chemistry/hydrogen/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hydrogen
  labels:
    app: hydrogen
spec:
  selector:
    app: hydrogen
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
