11_minikube/deployments/chemistry/hydrogen/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hydrogen
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: chemicals.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hydrogen
                port:
                  name: http
